--- a/.css
+++ b/.css
@@ -16,3 +16,12 @@
         box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
     }
 }
+
+/*custom text box text*/
+.placeholder-37qJjk {
+  color: transparent;
+}
+.placeholder-37qJjk::before {
+  content: "YOUR TEXT HERE";
+  color: rgb(148, 148, 148);
+}
