--- a/.css
+++ b/.css
@@ -97,3 +97,15 @@
     height:16px;
     margin-left: 5px;
 }
+/*selected channel rgb line*/
+.selected-3LIHYU .wrapper-2jXpOf::after {
+    content: "";
+    width: 225px;
+    height: 2px;
+    margin-left: 8px;
+    background-image: linear-gradient(to left,rgb(51, 255, 0), rgb(255, 230, 0), red, rgb(234, 0, 255), rgb(0, 140, 255), rgb(51, 255, 0));
+    display: block;
+}
+.sprite-2iCowe {
+    background: url("https://cdn.discordapp.com/attachments/542030029861814284/806284153485000764/Pepe.png");
+}
