--- a/.css
+++ b/.css
@@ -135,3 +135,14 @@ to {
     color: transparent !important;
     -webkit-background-clip: text;
 }
+/*cool chat username underline*/
+.username-1A8OIy:after {
+    background-image: linear-gradient(190deg, transparent, rgb(255, 255, 255), 
+    rgb(0, 0, 0));
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    top: 17px;
+    left: 0;
+}
