--- a/.css
+++ b/.css
@@ -201,3 +201,178 @@ to {
 .mentioned-xhSam7:before,.menu-3sdvDG:before{
   background-color:hsla(var(--mention-hue), 73%, 46%);
 }
+/*Smooth TopBar*/
+@import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
+:root {
+  --HSL-server-icon-size: 40px;  /* Size of the server icons | DEFAULT: 40px */
+  --HSL-server-spacing: 10px;  /* Spacing between each server icon | DEFAULT: 10px */
+}
+.panels-j1Uci_ > .container-3baos1 > .avatarWrapper-2yR4wp,.usernameContainer-1fp4nu,.hoverRoll-YK53gQ {
+    position: fixed;
+    z-index: 5;
+    top: 3px;
+    left: 8px
+}
+.container-3baos1 {
+    margin-bottom: -55px
+}
+.title-eS5yk3 {
+    font-weight: 650
+}
+.theme-dark .tooltipGreen-WdeQwd,.theme-light .tooltipGreen-WdeQwd,.theme-dark .tooltipRed-8-9NeP,.theme-light .tooltipRed-8-9NeP {
+    margin-top: -1135px;
+    position: absolute;
+    left: -140px
+}
+.theme-dark .tooltipRed-8-9NeP .tooltipPointer-3ZfirK,.theme-light .tooltipRed-8-9NeP .tooltipPointer-3ZfirK {
+    display:none;
+}
+.panels-j1Uci_ > .container-3baos1 > .avatarWrapper-2yR4wp:hover {
+    filter: grayscale(50%)
+}
+.guilds-1SWlCJ .scroller-2TZvBN {
+    margin-top: 175px !important
+}
+.unreadMentionsIndicatorTop-gA6RCh {
+    top: 48px
+}
+.container-3baos1 .flex-1xMQg5 {
+    position: fixed;
+    z-index: 10;
+    top: 6px;
+    max-height: 50px;
+    min-height: 50px;
+    align-items: center;
+    border-radius: 7px;
+    flex-direction: row-reverse
+}
+.container-3baos1 .flex-1xMQg5 > button:first-child {
+    margin-top: 2.5px
+}
+.container-3baos1 .flex-1xMQg5 > button {
+    border-radius: 30px;
+    transform: scale(1.1);
+    margin-left: 17px
+}
+.userInfoSectionHeader-CBvMDh,.note-QfFU8y {
+    display: none
+}
+.infoScroller-3EYYns>.userInfoSection-2acyCx:first-of-type {
+    margin-top: -45px
+}
+.topSectionNormal-2-vo2m { 
+    z-index: 10
+}
+.mentioned-xhSam7::before {
+    margin-top: auto;
+    height: 2px;
+    bottom: -3px;
+    width: 100%
+}
+.container-3baos1 .flex-1xMQg5 {
+    position: fixed;
+    z-index: 10;
+    top: 6px;
+    left: 185px;
+    width: 100px;
+    max-height: 50px;
+    min-height: 50px;
+    align-items: center;
+    border-radius: 7px;
+    flex-direction: row-reverse;
+    background-color: transparent
+}
+.container-3baos1 .flex-1xMQg5 > button {
+  transform: scale(1);
+  margin-left: 0 !important
+}
+.tutorialContainer-2sGCg9 .pill-3N7f9r {
+  display: none
+}
+.usernameContainer-1fp4nu {
+  position: fixed;
+  z-index: 5;
+  top: 3px;
+  left: 10px
+}
+[class="size14-e6ZScH title-eS5yk3"] {
+    margin-bottom: 1px 
+}
+#app-mount .guilds-1SWlCJ {
+  transform-origin: top left;
+  transform: rotate(-90deg);
+  height: 100vw !important;
+  width: var(--server-container);
+  top: var(--server-container);
+  bottom: unset;
+  position: absolute !important;
+  left: 240px;
+}
+#app-mount .guildSeparator-33mFX6 {
+  visibility: hidden;
+}
+.container-3baos1 .flex-1xMQg5 {
+  position: fixed;
+  z-index: 10;
+  top: 6px;
+  left: 135px;
+  width: 100px;
+  max-height: 50px;
+  min-height: 50px;
+  align-items: center;
+  border-radius: 7px;
+  flex-direction: row-reverse;
+  background-color: transparent;
+}
+.title-eS5yk3 {
+  margin-left: 0;
+  margin-top: 0;
+  line-height: 10px;
+  position: fixed;
+  left: 62px;
+  top: 39px;
+}
+.hoverRoll-YK53gQ {
+  margin-left: 47px;
+  margin-top: 35px;
+  width: 76px;
+}
+.avatarWrapper-2yR4wp > .avatar-SmRMf2:not(.spotify-cover) {
+  margin-left: -10px;
+  padding: 4px;
+}
+div.avatar-SmRMf2.wrapper-3t9DeA:not(.spotify-cover) {
+  margin-top: 8px;
+  left: 4px;
+  width: 40px !important;
+  height: 40px !important;
+}
+.upperBadge-2XnnGB {
+  top: -1px;
+  left: 25px;
+}
+.container-3baos1 .flex-1xMQg5 {
+    top: 26px;
+}
+.panels-j1Uci_ > .container-3baos1 > .avatarWrapper-2yR4wp, .usernameContainer-1fp4nu, .hoverRoll-YK53gQ:not([aria-label*="Click to copy username"]) {
+  left: 15px;
+  top: 19px;
+}
+div#popout_5.layer-v9HyYc, div#popout_2.layer-v9HyYc, div#popout_4.layer-v9HyYc {
+  left: 10px !important;
+}
+.subtext-3CDbHg {
+  position: relative;
+  left: -50px;
+}
+div.nameTag-3uD-yy.canCopy-2VBT7N {
+  position: fixed;
+  z-index: 10;
+  top: 54px;
+  margin-left: 50px;
+  flex-direction: row-reverse;
+  left: 62px;
+}
+.status-1eOIMS, .svg-2V3M55 {
+  position: relative;
+}
