--- a/.css
+++ b/.css
@@ -658,3 +658,123 @@ body {
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2 {
+  position: absolute;
+  bottom: 20px;
+  right: 5px;
+  height: 45px;
+  width: 45px;
+  border: none;
+  border-radius: 40px;
+  background: linear-gradient(to bottom right, var(--main-color, #000000), var(--hover-color, #000000));
+  box-shadow: 2px 10px 10px var(--shadow, rgba(0, 0, 0, 0.399)) !important;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+  pointer-events: all;
+  padding: 0;
+}
+
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2 .searchBarComponent-32dTOx {
+  background-color: transparent !important;
+}
+
+.privateChannels-1nO12o .searchBar-6Kv8R2 .inner-3ErfOT {
+  height: 100%;
+  width: 100%;
+}
+
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2 .searchBarComponent-32dTOx::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 50px;
+  bottom: 0;
+  right: 0;
+  background: url(https://discordapp.com/assets/4d254296157bb8927b7d53ed59beb0d8.svg) center/20px no-repeat;
+  pointer-events: none;
+}
+/*Search bubble dm*/
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2 .searchBarComponent-32dTOx::before {
+  content: 'Search Direct Messages';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-25%);
+  width: 180px;
+  bottom: 0;
+  right: 0vw;
+  color: rgb(255, 255, 255);
+  opacity: .5;
+  font-size: 12px;
+  line-height: 100%;
+  transition: all 1s ease-in-out;
+  pointer-events: none;
+}
+
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2 .searchBarComponent-32dTOx {
+  color: transparent;
+}
+
+#app-mount .privateChannels-1nO12o .searchBar-6Kv8R2:hover {
+  width: 200px;
+}
+
+.privateChannels-1nO12o .scrollerWrap-2lJEkd::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 48px;
+  width: 100%;
+  border-bottom: 2px solid var(--main-color, #171c2e);
+  box-sizing: border-box;
+  z-index: 9999;
+}
+
+.privateChannels-1nO12o .scrollerWrap-2lJEkd .scroller-2FKFPG {
+  margin-top: 50px;
+}
+
+/*size*/
+#floating-editor-window.resizable {
+    max-height: unset;
+    max-width: unset;
+}
+/*combine userid with textbox*/
+.panels-j1Uci_ {
+  margin-bottom: 23px;
+  background-color: var(--background-secondary);
+}
+.panels-j1Uci_ > .container-3baos1 {
+  height: 44px;
+  margin-left: 16px;
+  border-radius: 5px 0 0 5px;
+  background-color: var(--channeltextarea-background);
+}
+.panels-j1Uci_ > .container-3baos1 > .directionRow-3v3tfG {
+  margin-right: -5px;
+}
+.panels-j1Uci_ > .container-3baos1 > .directionRow-3v3tfG svg {
+  width: 24px;
+  height: auto;
+}
+.panels-j1Uci_ > .container-3baos1 > .directionRow-3v3tfG button {
+  background-color: transparent !important;
+}
+
+.attachButton-2WznTc {
+  padding-left: 0 !important;
+  padding-right: 45px !important;
+}
+
+.chatContent-a9vAAp > form {
+  padding-left: 0 !important;
+}
+
+.channelTextArea-rNsIhG > div {
+  border-radius: 0 5px 5px 0;
+}
+
+.channelTextArea-rNsIhG {
+  border-radius: 0 !important;
+}
