--- a/.css
+++ b/.css
@@ -805,4 +805,4 @@ body {
 /* custom ones */
 * {cursor: url(https://imgur.com/EkaA94W.png), url(https://imgur.com/EkaA94W.png), auto !important;} /*Blue*/
 * {cursor: url(https://imgur.com/Bo9eggr.png), url(https://imgur.com/Bo9eggr.png), auto !important;} /*Pink*/
-* {cursor: url(https://i.imgur.com/vCgMRDg.png), url(https://i.imgur.com/vCgMRDg.png), auto !important;} /* BIG MONEY CURSOR */
+* {cursor: url(https://i.imgur.com/vCgMRDg.png), url(https://i.imgur.com/vCgMRDg.png), auto !important;} /* BIG MONEY CURSOR *
