--- a/.css
+++ b/.css
@@ -806,3 +806,7 @@ body {
 * {cursor: url(https://imgur.com/EkaA94W.png), url(https://imgur.com/EkaA94W.png), auto !important;} /*Blue*/
 * {cursor: url(https://imgur.com/Bo9eggr.png), url(https://imgur.com/Bo9eggr.png), auto !important;} /*Pink*/
 * {cursor: url(https://i.imgur.com/vCgMRDg.png), url(https://i.imgur.com/vCgMRDg.png), auto !important;} /* BIG MONEY CURSOR */
+.
+.
+.
+.
