--- a/.css
+++ b/.css
@@ -1,4 +1,4 @@
-/*selected dm animation pulse*/
+/*selected dm animation pulse*/h
 .selected-aXhQR6 {
   border-left: 0.20em outset #55d482;
   background: linear-gradient(to bottom, #1a2980a4, #26d0cdce);
